syntax = "proto3";

package schedule_service;
option go_package = ".;schedule_service";

message GroupItem {
    string id       = 1;
    string name     = 2;
    string symbolic = 3;
}